deployment/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ouroboros
  labels:
    name: ouroboros
    environment: production
